# sisyph_bot

./: README.md  arduino_cmds.txt  aruco_test.rviz  gmapping_nodes.txt  launching_cmds.txt  offline.rviz
bno055_ardu/: bno055_ardu.ino
odom_ardu/: odom_ardu.ino  для одометра и работы с arduino-cli.txt
sisyph_ardu/: sisyph_ardu.ino
sisyph_control/: CMakeLists.txt  package.xml
sisyph_description/: CMakeLists.txt  package.xml
sisyph_slam/: CMakeLists.txt  package.xml
sisyph_slam/config/: aceline_s200_1080p_30fps.yaml  aruco_conf.yaml  aruco_test.rviz  hp_720p_30fps.yaml  old_usb_cam_480p.yaml
sisyph_slam/launch/: aruco.launch  aruco0.launch  aruco1.launch  calibrate_cam.launch  cam0.launch  cam1.launch  csv_write.launch  exp_viz.launch  experiment.launch  gmapping.launch  gmapping_lidar.launch  hector_mapping.launch  mapping.launch  mapping_lidar.launch  multi_aruco.launch  multi_cam.launch  multi_cam_aruco.launch  multi_usb_cam.launch  offline_experiment.launch  old_offline_experiment.launch  robot_aruco.launch  robot_tfscan_sync.launch  usb_cam.launch
sisyph_slam/rviz/: aruco_test.rviz  odom_test.rviz  offline.rviz  online.rviz
sisyph_slam/scripts/: fid_to_map.py  fid_to_tf.py  global_frame.py  odom_tf_pub.py  robot_multi_tf_pub.py  robot_multi_tf_pub_230125 copy.py  robot_multi_tf_pub_230125.py  robot_multi_tf_pub_230125_old.py  robot_multi_tf_pub_no_world.py  robot_tf_pub.py  robot_tf_pub_281224.py  robot_tf_pub_oldest.py  scan_tf_sync.py  scan_tf_sync_281224.py  tasty_test.py  tf_utils.py
sisyph_slam/src/: robot_tfs_pub.cpp
(+5 files in other folders)
